--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "build" : "webpack -w",
     "start": "node ./bin/www"
   },
   "dependencies": {
@@ -14,7 +15,11 @@
     "morgan": "~1.9.1"
   },
   "main": "app.js",
-  "devDependencies": {},
+  "devDependencies": {
+    "babel-loader": "^8.0.6",
+    "webpack": "^4.33.0",
+    "webpack-cli": "^3.3.3"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/wrlab/dwxr.git"
