--- a/package.json
+++ b/package.json
@@ -3,19 +3,25 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "build" : "webpack -w",
+    "build": "webpack -w",
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "aframe": "^0.9.2",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "gun": "^0.2019.515",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1"
   },
   "main": "app.js",
   "devDependencies": {
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.5",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/preset-env": "^7.4.5",
     "babel-loader": "^8.0.6",
     "webpack": "^4.33.0",
     "webpack-cli": "^3.3.3"
