--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.4.4",
+    "@material/button": "^2.3.0",
+    "@material/layout-grid": "^0.41.0",
+    "@material/ripple": "^2.3.0",
+    "@material/top-app-bar": "^2.3.0",
     "aframe": "^0.9.2",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
@@ -22,9 +27,18 @@
     "@babel/core": "^7.4.5",
     "@babel/plugin-proposal-class-properties": "^7.4.4",
     "@babel/preset-env": "^7.4.5",
+    "autoprefixer": "^9.6.0",
     "babel-loader": "^8.0.6",
+    "babel-preset-es2015": "^6.24.1",
+    "css-loader": "^2.1.1",
+    "extract-loader": "^3.1.0",
+    "file-loader": "^4.0.0",
+    "node-sass": "^4.12.0",
+    "postcss-loader": "^3.0.0",
+    "sass-loader": "^7.1.0",
     "webpack": "^4.33.0",
-    "webpack-cli": "^3.3.3"
+    "webpack-cli": "^3.3.3",
+    "webpack-dev-server": "^2.11.5"
   },
   "repository": {
     "type": "git",
