--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "express": "~4.16.1",
     "gun": "^0.2019.515",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1"
+    "jquery": "^3.4.1",
+    "morgan": "~1.9.1",
+    "popper.js": "^1.15.0"
   },
   "main": "app.js",
   "devDependencies": {
@@ -29,15 +31,18 @@
     "babel-preset-es2015": "^6.24.1",
     "clean-css": ">=4.1.11",
     "css-loader": "^2.1.1",
+    "exports-loader": "^0.7.0",
     "extract-loader": "^3.1.0",
     "file-loader": "^4.0.0",
+    "lodash": ">=4.17.11",
+    "mini-css-extract-plugin": "^0.7.0",
     "node-sass": "^4.12.0",
     "postcss-loader": "^3.0.0",
     "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
     "webpack": "^4.33.0",
     "webpack-cli": "^3.3.3",
-    "webpack-dev-server": ">=3.1.11",
-    "lodash": ">=4.17.11"
+    "webpack-dev-server": ">=3.1.11"
   },
   "repository": {
     "type": "git",
