--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "gun": "^0.2019.515",
     "http-errors": "~1.6.3",
     "jquery": "^3.4.1",
-    "morgan": "~1.9.1",
-    "popper.js": "^1.15.0"
+    "morgan": "~1.9.1"
   },
   "main": "app.js",
   "devDependencies": {
@@ -38,6 +37,7 @@
     "mini-css-extract-plugin": "^0.7.0",
     "node-sass": "^4.12.0",
     "postcss-loader": "^3.0.0",
+    "precss": "^4.0.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.33.0",
