--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
+    "dev" : "node ./bin/dev",
     "build": "webpack -w",
     "start": "node ./bin/www"
   },
@@ -25,6 +26,7 @@
     "@babel/core": "^7.4.5",
     "@babel/plugin-proposal-class-properties": "^7.4.4",
     "@babel/preset-env": "^7.4.5",
+    "@fortawesome/fontawesome-free": "^5.9.0",
     "autoprefixer": "^9.6.0",
     "babel-loader": "^8.0.6",
     "babel-preset-es2015": "^6.24.1",
@@ -36,6 +38,7 @@
     "lodash": ">=4.17.11",
     "mini-css-extract-plugin": "^0.7.0",
     "node-sass": "^4.12.0",
+    "popper.js": "^1.15.0",
     "postcss-loader": "^3.0.0",
     "precss": "^4.0.0",
     "sass-loader": "^7.1.0",
