add memo for npm run dev

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "dev" : "node ./bin/dev",
+    "dev" : "node ./bin/dev", // http://localhost:3000
     "build": "webpack -w",
     "start": "node ./bin/www"
   },
