Set package postprocessing

--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "jquery": "^3.4.1",
     "morgan": "~1.9.1",
     "node-webcrypto-ossl": "^1.0.47",
-    "text-encoding": "^0.7.0"
+    "postprocessing": "^6.5.1",
+    "text-encoding": "^0.7.0",
+    "three": "^0.106.1"
   },
   "main": "app.js",
   "devDependencies": {
