--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "exports-loader": "^0.7.0",
     "extract-loader": "^3.1.0",
     "file-loader": "^4.0.0",
-    "lodash": ">=4.17.11",
+    "lodash": "~>4.17.13",
     "mini-css-extract-plugin": "^0.7.0",
     "node-sass": "^4.12.0",
     "popper.js": "^1.15.0",
