--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
-    "gun": "^0.2019.515",
+    "gun": "0.2019.413",
     "http-errors": "~1.6.3",
     "jquery": "^3.4.1",
     "morgan": "~1.9.1",
@@ -37,7 +37,7 @@
     "exports-loader": "^0.7.0",
     "extract-loader": "^3.1.0",
     "file-loader": "^4.0.0",
-    "lodash": "~>4.17.13",
+    "lodash": ">=4.17.13",
     "mini-css-extract-plugin": "^0.7.0",
     "node-sass": "^4.12.0",
     "popper.js": "^1.15.0",
