--- a/package.json
+++ b/package.json
@@ -10,17 +10,26 @@
   "dependencies": {
     "@babel/polyfill": "^7.4.4",
     "aframe": "^0.9.2",
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
+    "connect-mongo": "^3.0.0",
     "cookie-parser": "~1.4.4",
+    "d2coding": "^1.3.2",
     "debug": "~2.6.9",
+    "dotenv": "^8.1.0",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
-    "gun": "^0.2019.515",
+    "express-session": "^1.16.2",
+    "gps-distance": "0.0.4",
+    "gun": "^0.2019.413",
     "http-errors": "~1.6.3",
     "jquery": "^3.4.1",
+    "mongoose": "^5.6.10",
     "morgan": "~1.9.1",
     "node-webcrypto-ossl": "^1.0.47",
     "postprocessing": "^6.5.1",
+    "random-bytes": "^1.0.0",
+    "request": "^2.88.0",
     "text-encoding": "^0.7.0"
   },
   "main": "app.js",
