--- a/package.json
+++ b/package.json
@@ -8,55 +8,61 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.4.4",
+    "@babel/polyfill": "^7.6.0",
     "aframe": "^0.9.2",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
-    "connect-mongo": "^3.0.0",
+    "connect-mongo": "^3.1.0",
     "cookie-parser": "~1.4.4",
     "d2coding": "^1.3.2",
     "debug": "~2.6.9",
-    "dotenv": "^8.1.0",
-    "ejs": "~2.6.1",
+    "dotenv": "^8.2.0",
+    "ejs": "^2.6.2",
     "express": "~4.16.1",
-    "express-session": "^1.16.2",
+    "express-session": "^1.17.0",
     "gps-distance": "0.0.4",
-    "gun": "^0.2019.413",
+    "gun": "0.2019.930",
     "http-errors": "~1.6.3",
     "jquery": "^3.4.1",
-    "mongoose": "^5.6.10",
+    "moment": "^2.24.0",
+    "moment-timezone": "^0.5.27",
+    "mongoose": "^5.7.7",
     "morgan": "~1.9.1",
-    "node-webcrypto-ossl": "^1.0.47",
-    "postprocessing": "^6.5.1",
+    "node-webcrypto-ossl": "^1.0.48",
+    "panic-server": "^1.1.1",
+    "platform": "^1.3.5",
+    "postprocessing": "^6.8.5",
     "random-bytes": "^1.0.0",
     "request": "^2.88.0",
+    "socket.io": "latest",
+    "socket.io-client": "^2.3.0",
     "text-encoding": "^0.7.0"
   },
   "main": "app.js",
   "devDependencies": {
-    "@babel/cli": "^7.4.4",
-    "@babel/core": "^7.4.5",
-    "@babel/plugin-proposal-class-properties": "^7.4.4",
-    "@babel/preset-env": "^7.4.5",
-    "autoprefixer": "^9.6.0",
+    "@babel/cli": "^7.6.4",
+    "@babel/core": "^7.6.4",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/preset-env": "^7.6.3",
+    "autoprefixer": "^9.7.0",
     "babel-loader": "^8.0.6",
     "babel-preset-es2015": "^6.24.1",
     "clean-css": ">=4.1.11",
     "css-loader": "^2.1.1",
     "exports-loader": "^0.7.0",
     "extract-loader": "^3.1.0",
-    "file-loader": "^4.0.0",
+    "file-loader": "^4.2.0",
     "lodash": ">=4.5.0",
     "mini-css-extract-plugin": "^0.7.0",
-    "node-sass": "^4.12.0",
-    "popper.js": "^1.15.0",
+    "node-sass": "^4.13.0",
+    "popper.js": "^1.16.0",
     "postcss-loader": "^3.0.0",
     "precss": "^4.0.0",
-    "sass-loader": "^7.1.0",
+    "sass-loader": "^7.3.1",
     "style-loader": "^0.23.1",
-    "webpack": "^4.33.0",
-    "webpack-cli": "^3.3.3",
-    "webpack-dev-server": ">=3.1.11"
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.9",
+    "webpack-dev-server": "^3.9.0"
   },
   "repository": {
     "type": "git",
