--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.6.0",
-    "aframe": "^0.9.2",
+    "aframe": "1.0.0",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
     "connect-mongo": "^3.1.0",
